cmake_minimum_required(VERSION 2.8.3)
project(package_template)


#######################################################################################################################
## flags
#######################################################################################################################

# remove logging (ROSCONSOLE_SEVERITY_NONE=5)
# set(ROS_COMPILE_FLAGS "-DROSCONSOLE_MIN_SEVERITY=5 ${ROS_COMPILE_FLAGS}")

set(${PROJECT_NAME}_CATKIN_COMPONENTS
    roscpp
    rosconsole
)



#######################################################################################################################
## packages
#######################################################################################################################

find_package(catkin REQUIRED COMPONENTS ${${PROJECT_NAME}_CATKIN_COMPONENTS})




#######################################################################################################################
## catkin specific configuration
#######################################################################################################################

catkin_package(
    INCLUDE_DIRS
        include
    LIBRARIES
#        package_template
    CATKIN_DEPENDS
        ${${PROJECT_NAME}_CATKIN_COMPONENTS}
    DEPENDS
)



#######################################################################################################################
## build
#######################################################################################################################

#==============================================================================
# includes
#==============================================================================

include_directories(
    include
    ${catkin_INCLUDE_DIRS}
)



#==============================================================================
# libraries
#==============================================================================

#add_library(package_template
#    src/package_template.cpp
#)



#==============================================================================
# executables
#==============================================================================

#add_executable(package_template_node
#    src/package_template_node.cpp
#)



#==============================================================================
# library link
#==============================================================================

#target_link_libraries(package_template
#    ${catkin_LIBRARIES}
#)



#==============================================================================
# executables link
#==============================================================================

#target_link_libraries(package_template_node
#    package_template
#    ${catkin_LIBRARIES}
#)
